--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <title>Mastering of the Elements Game</title>
     <meta name="description" content="A unique and beautiful idea for a game that lets you master the elements of the universe!">
     <meta name="author" content="Robert Ireland">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"/> -->
 
     <style>
         canvas {
@@ -32,6 +33,15 @@
             -ms-transform: translate(-50%, -50%);
             transform: translate(-50%, -50%);
         }
+        #accelButton {
+            margin: 10px;
+            position: absolute;
+            /* top: 50%; */
+            bottom: 5%;
+            left: 60%;
+            -ms-transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%);
+        }
     </style>
 </head>
 <body>
@@ -41,20 +51,36 @@
 
     <!-- I'm first going to try and make as much of this game in canvas since I will be able to have almost all the control that I want, and it
     will be as cross platform as it can get at that point. And the future will bring more ease of adding new controls/signals/outside interactions -->
-
-<p id="canvasLocation"></p>
-<p></p>
+<p id="canvasLocation" ontouchstart="accelButton('Pressed');" ontouchend="accelButton('Released');"></p>
+<p id="belowCanvas"></p>
 <!-- make the button dissapear after pressing start -->
-<button id="startButton" onclick="startGame(); document.body.setAttribute('onkeydown', 'keyWasPressed(event)'); document.body.setAttribute('onkeyup', 'keyWasReleased(event)'); this.style.display='none'"> Start Game </button>
+<button id="startButton" touchstart="this.onclick.call();" onclick="startGame(); document.body.setAttribute('onkeydown', 'keyWasPressed(event)'); document.body.setAttribute('onkeyup', 'keyWasReleased(event)'); this.style.display='none'"> Start Game </button>
 <!-- document.getElementById('tagName').setAttribute('onkeydown', 'keyWasPressed(event)'); This allows key presses to be listed for after start is pressed-->
+<!-- <button id="accelButton" ontouchstart="accelButton('Pressed');" ontouchend="accelButton('Released');" >Accelerate Up</button> -->
+<!-- <button id="accelButton" ontouchstart="accelButton('Pressed'); console.log('ontouchstart');" ontouchend="accelButton('Released'); console.log('ontouchend');" >Accelerate Up</button> -->
+
+
+<!-- <p>Hello</p> -->
+
 
 <script>
+
+// var action = 1;
+function accelButton(action='Pressed') {
+    if (action == "Pressed") {
+        me_ThePlayer1CharacterHero.tryingToForceLiftObjUp = true;
+    } else if (action == "Released") {
+        me_ThePlayer1CharacterHero.tryingToForceLiftObjUp = false;
+    }   
+}
+
 
 var hero = null;
 
 // console.log(screen.height)
 // console.log(screen.pixelDepth)
 // console.log(screen.width)
+// I would like to include touch support for basic operations
 
 function startGame() {
     myGameArea.start();
@@ -63,10 +89,13 @@ function startGame() {
     me_ThePlayer1CharacterHero = new me_ThePlayer1CharacterHero(0, 0, 4*pixelsPerMeter);
     hero = me_ThePlayer1CharacterHero;
 
+    myGameArea.canvasHeight
+    myGameArea.canvasWidth
+
     // create a few game objs
-    block1 = new blockComponent(100, 320, 0, 30, 30, "red", 30, "fire");
-    block2 = new blockComponent(220, 200, 0, 50, 50, "gray", 50, "metal");
-    ball1 = new ballComponent(500, 300, 0, 100, "blue", true, 80, "water");
+    block1 = new blockComponent(0.15 * myGameArea.canvasWidth, 200, 0, 30, 30, "red", 40, "fire");
+    block2 = new blockComponent(0.45 * myGameArea.canvasWidth, 200, 0, 50, 50, "gray", 50, "metal");
+    ball1 = new ballComponent(0.95 * myGameArea.canvasWidth, 200, 0, 100, "blue", true, 80, "water");
 
     controllableGameObjs["block1"] = block1;
     controllableGameObjs["block2"] = block2;
@@ -545,7 +574,7 @@ function heroDistanceToObj_m(obj) {
 }
 
 
-var screenHeightPercent = 0.80;
+var screenHeightPercent = 0.70;
 var screenWidthPercent = 0.90;
 
 // In the myGameArea obj, there's an interval which will run the updateGameArea() 
