--- a/index.html
+++ b/index.html
@@ -5,68 +5,73 @@
     <title>Mastering of the Elements Game</title>
     <meta name="description" content="A unique and beautiful idea for a game that lets you master the elements of the universe!">
     <meta name="author" content="Robert Ireland">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"/> -->
+    <meta name="viewport" content="width=device-width, user-scalable=no"/> <!-- <meta name="viewport" content = "width = device-width, height=device-height, initial-scale = 1.0, minimum-scale = 1, maximum-scale = 1, user-scalable=no" /> --> <!-- user-scalable=no was needed for to disabling zooming on the ios -->
+    
+    <!-- //App name -->
+    <meta name="apple-mobile-web-app-title" content="Element Bending" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />     <!-- black and default were the other options -->
+
+    <!-- //APP ICONS  -->
+    <link rel="apple-touch-icon" href="/AvatarImages/ebIcon.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="/AvatarImages/ebIcon76.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="/AvatarImages/ebIcon120.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="/AvatarImages/ebIcon152.png">
 
     <style>
+        body {
+            margin: 0;
+            background-color: rgb(226, 226, 226);
+            /* touch-action:none; not sure why I need this initially */
+        }
         canvas {
-            border: 1px solid #d3d3d3;
-            background-color: #f1f1f1;
+            display: block;  /* prevents scrollbar */
+            width: 100vw;
+            height: 100vh;
         }
-        #canvasLocation {
-            /* margin-top: 20px; */
-            /* margin-left: 4.5%; */
+        button {
+            background-color:steelblue;
             position: absolute;
-            top: 15px;/*50%;*/
-            left: 50%;
-            -ms-transform: translate(-50%, 0%);
-            /* , -50%); */
-            transform: translate(-50%, 0%)
-            /* , -50%); */
-        }
-        #startButton {
-            margin: 10px;
-            position: absolute;
-            /* top: 50%; */
             bottom: 20%;
             left: 50%;
             -ms-transform: translate(-50%, -50%);
             transform: translate(-50%, -50%);
+            /* disable highlighting the text on the button with long button touch/press/hold */
+            -webkit-user-select: none; 
+            -moz-user-select: none;
         }
-        #accelButton {
-            margin: 10px;
-            position: absolute;
-            /* top: 50%; */
-            bottom: 5%;
-            left: 60%;
-            -ms-transform: translate(-50%, -50%);
-            transform: translate(-50%, -50%);
+        /* the following 5 css settings are (annoyingly) essential
+        body {
+            margin: 0;
+            background-color: white;
         }
+        canvas {
+            display: block;
+            width: 100vw;
+            height: 100vh;
+        } */
     </style>
 </head>
 <body>
+<!-- I'm first going to try and make as much of this game in canvas since I will be able to have almost all the control that I want, and it
+will be as cross platform as it can get at that point. And the future will bring more ease of adding new controls/signals/outside interactions -->
 
-<!-- </body> onkeydown=""> -->
-    <!-- onkeydown="keyWasPressed(event)" -->
+<!-- <canvas id="canvasLocation" ontouchstart="touchAccelerate('Pressed');" ontouchend="touchAccelerate('Released');"></canvas>-->
+<canvas id="canvas" ontouchstart="touchAccelerate('Pressed');" ontouchend="touchAccelerate('Released');"></canvas>
 
-    <!-- I'm first going to try and make as much of this game in canvas since I will be able to have almost all the control that I want, and it
-    will be as cross platform as it can get at that point. And the future will bring more ease of adding new controls/signals/outside interactions -->
-<p id="canvasLocation" ontouchstart="accelButton('Pressed');" ontouchend="accelButton('Released');"></p>
-<p id="belowCanvas"></p>
 <!-- make the button dissapear after pressing start -->
 <button id="startButton" touchstart="this.onclick.call();" onclick="startGame(); document.body.setAttribute('onkeydown', 'keyWasPressed(event)'); document.body.setAttribute('onkeyup', 'keyWasReleased(event)'); this.style.display='none'"> Start Game </button>
-<!-- document.getElementById('tagName').setAttribute('onkeydown', 'keyWasPressed(event)'); This allows key presses to be listed for after start is pressed-->
-<!-- <button id="accelButton" ontouchstart="accelButton('Pressed');" ontouchend="accelButton('Released');" >Accelerate Up</button> -->
-<!-- <button id="accelButton" ontouchstart="accelButton('Pressed'); console.log('ontouchstart');" ontouchend="accelButton('Released'); console.log('ontouchend');" >Accelerate Up</button> -->
-
 
 <!-- <p>Hello</p> -->
-
+<!-- <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script> -->
 
 <script>
 
+// disable holding something to select it and then open the right click menu
+document.addEventListener('contextmenu', event => event.preventDefault());
+
 // var action = 1;
-function accelButton(action='Pressed') {
+function touchAccelerate(action='Pressed') {
     if (action == "Pressed") {
         me_ThePlayer1CharacterHero.tryingToForceLiftObjUp = true;
     } else if (action == "Released") {
@@ -74,13 +79,7 @@ function accelButton(action='Pressed') {
     }   
 }
 
-
-var hero = null;
-
-// console.log(screen.height)
-// console.log(screen.pixelDepth)
-// console.log(screen.width)
-// I would like to include touch support for basic operations
+var hero = null; // I would like to include touch support for basic operations
 
 function startGame() {
     myGameArea.start();
@@ -88,9 +87,6 @@ function startGame() {
     // creates the player hero char:
     me_ThePlayer1CharacterHero = new me_ThePlayer1CharacterHero(0, 0, 4*pixelsPerMeter);
     hero = me_ThePlayer1CharacterHero;
-
-    myGameArea.canvasHeight
-    myGameArea.canvasWidth
 
     // create a few game objs
     block1 = new blockComponent(0.15 * myGameArea.canvasWidth, 200, 0, 30, 30, "red", 40, "fire");
@@ -104,7 +100,6 @@ function startGame() {
 
 // any game obj that I can potentially control should be in here.
 var controllableGameObjs = {};
-
 
 // This function runs on a timer. Every tick (20ms for 50FPS), the entire screen gets cleared and the objs in the canvas get updated
 function updateGameArea() {
@@ -134,9 +129,20 @@ function updateGameArea() {
     // gravity(block1);
     // gravity(block2);
     // Update all the objs that were or will be visible (so that they can get redrawn to the screen) after every clear screen call
+
+
+    // This is how I can use the mouse's location to affect where the objects should move to:
+    // if (myGameArea.x && myGameArea.y) {
+    //     ball1.x = myGameArea.x + ball1.radius;
+    //     ball1.y = myGameArea.y + ball1.radius;
+    // }
+
     ball1.update();
     block1.update();
     block2.update();
+
+    // make sure the screen is full:
+    resize(canvas);
 }
 
 
@@ -568,49 +574,55 @@ function blockComponent(x=200, y=300, z=0, width, height, color, mass=100, eleme
     }
 }
 
+// This is the distance the hero is from the object
 function heroDistanceToObj_m(obj) {
-    // return Math.max(obj.z - hero.z, 5);
     return metersPerPixel * Math.sqrt((obj.x-hero.x)**2 + (obj.y-hero.y)**2 + (obj.z-hero.z)**2);//**0.5;
 }
 
-
-var screenHeightPercent = 0.70;
-var screenWidthPercent = 0.90;
+// On a desktop, the user might resize the window. The canvas width and heights needs to be updated in that case.
+function resize(canvas) {
+    // Lookup the size the browser is displaying the canvas.
+    var displayWidth = canvas.clientWidth;
+    var displayHeight = canvas.clientHeight;
+    // Check if the canvas is not the same size.
+    if (canvas.width != displayWidth || canvas.height != displayHeight) {
+        // Make the canvas the same size
+        canvas.width = displayWidth;
+        canvas.height = displayHeight;
+    }
+}
 
 // In the myGameArea obj, there's an interval which will run the updateGameArea() 
 // function every 20th millisecond (50 times per second). Also there's a function called clear(), that clears the entire canvas.
 var myGameArea = {
-    canvasHeight : screenHeightPercent*screen.availHeight,
-    canvasWidth : screenWidthPercent*screen.width,
-    canvas : document.createElement("canvas"),
+    canvas : document.getElementById("canvas"),
+    canvasHeight : this.canvas.clientHeight,
+    canvasWidth : this.canvas.clientWidth,
     start : function() {
-        this.canvas.width = screenWidthPercent*screen.width;
-        this.canvas.height = screenHeightPercent*screen.availHeight;
+        // I need to update the canvas.width and canvas.height to the canvas.clientWidth and canvas.clientHeight if the user changes the size of their window
+        this.canvas.height = this.canvas.clientHeight;
+        this.canvas.width = this.canvas.clientWidth;
+
         this.context = this.canvas.getContext("2d");
-        document.getElementById("canvasLocation").appendChild(this.canvas);
         // create a timer with setInterval that triggers updateGameArea() to get called every 20ms (50FPS)
         this.interval = setInterval(updateGameArea, _50FPS);
+        // If I want to keep track of the mouse's x and y position, I can use the following function and store the values in the var's x and y vars
+        window.addEventListener('mousemove', function (e) {
+            myGameArea.x = e.pageX;
+            myGameArea.y = e.pageY;
+        })
     },
     clear : function() {
         this.context.clearRect(0, 0, this.canvas.width, this.canvas.height); // clear the entire canvas
     }
 }
 
-
-var _50FPS = 20; // 1/(20*10^-3) == 50 FPS == 1/20ms
+var _50FPS = 20; // 1/(20*10^-3) == 50 FPS // 20 represents 20ms
 // var _40FPS = 25;
 // var _30FPS = 33.3;
+var frameSpeed_ms = _50FPS;
 
-// var deltaTime = _50FPS*10**-3; // 20ms // 0.020
-var deltaTime = 0.020; // 20ms // 0.020sec
-
-
-// fillRect(x, y, width, height)
-// Draws a filled rectangle.
-// strokeRect(x, y, width, height)
-// Draws a rectangular outline.
-// clearRect(x, y, width, height)
-// Clears the specified rectangular area, making it fully transparent.
+var deltaTime = frameSpeed_ms * 10**-3; //0.020; // 20ms // 0.020sec // var deltaTime = _50FPS*10**-3; // 20ms // 0.020
 
 </script>
 </body>
